# dev-samples

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
dbt_dev_samples/: dbt_project.yml  profiles.yml
dbt_dev_samples/macros/samples/: create_sample.sql
dbt_dev_samples/macros/schema_name/: generate_alias_name.sql  generate_schema_name.sql
src/dev_samples/mockdata/: __init__.py  mockdata.py
