[project]
name = "dev-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Wendel", email = "daniel2wendel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.9",
    "dbt-postgres>=1.9.0",
    "dotenv>=0.9.9",
    "faker>=37.5.3",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
dev-samples = "dev_samples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
